--- a/app/src/main/res/drawable/ratingstars.xml
+++ b/app/src/main/res/drawable/ratingstars.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@android:id/background"
-        android:drawable="@drawable/btn_b_star_off" />
-    <item
-        android:id="@android:id/secondaryProgress"
-        android:drawable="@drawable/btn_b_star_off" />
-    <item
-        android:id="@android:id/progress"
-        android:drawable="@drawable/btn_b_star_on" />
-</layer-list>
 
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
+        <bitmap android:src="@drawable/btn_b_star_off" />
+    </item>
+    <item android:id="@android:id/secondaryProgress">
+        <bitmap android:src="@drawable/btn_b_star_off" />
+    </item>
+    <item android:id="@android:id/progress">
+        <bitmap android:src="@drawable/btn_b_star_on" />
+    </item>
+</layer-list>
